# SparkLabs

./: README.md  README_CN.md  main.cpp
.github/workflows/: deploy.yml
assets/: Mini-Game.mov
backend/: __init__.py  app.py  backend_server.cpp  requirements.txt  websocket.py
backend/routes/: __init__.py  agent.py  agent_adaptive.py  agent_ai_native.py  agent_ai_native_orchestrator.py  agent_architect_conductor.py  agent_chat.py  agent_cognitive.py  (+58 more)
core/: CMakeLists.txt  SparkObject.h  Types.h
core/Threading/: Mutex.h  Signal.h  ThreadID.h
core/io/: CMakeLists.txt  Vector.h
core/math/: CMakeLists.txt  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
core/memory/: CMakeLists.txt  SmartPtr.cpp  SmartPtr.h
core/object/: CMakeLists.txt  Object.cpp  Object.h
core/string/: CMakeLists.txt  String.cpp  String.h  StringHash.cpp  StringHash.h
core/types/: CMakeLists.txt
docs/: PYTHON_CPP_INTEGRATION.md
engine/: Engine.h
frontend/: App.tsx  editor.html  index.css  index.html  package-lock.json  package.json  sparklabs.html  sparklabs_home.html  tailwind.config.js  tsconfig.json  vite.config.ts
platform/: CMakeLists.txt  FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  RendererBackend.h  Timer.cpp  Timer.h  Window.cpp  Window.h
scripts/: CMakeLists.txt
scripts/python/: ai_creation_example.py  ai_integration.py
sparkai/: CMakeLists.txt  __init__.py  config.py
sparkai/agent/: __init__.py  agent_ab_test_runner.py  agent_accessibility_auditor.py  agent_achievement_designer.py  agent_action_sequencer.py  agent_action_space.py  agent_adaptive_cognition.py  agent_adaptive_difficulty.py  agent_adaptive_director.py  agent_adaptive_prompting.py  agent_agentic_coding.py  agent_agentic_memory.py  agent_ai_bug_hunter.py  agent_ai_dialog_director.py  agent_ai_dungeon_master.py  agent_ai_encounter_director.py  agent_ai_meta_game_director.py  agent_ai_music_composer.py  agent_ai_narrative_engine.py  agent_ai_native_brain.py  agent_ai_native_orchestrator.py  agent_ai_performance_profiler.py  agent_ai_quest_generator.py  agent_ai_trailer_director.py  agent_ai_voice_synthesizer.py  agent_analytics_query.py  agent_analytics_synthesizer.py  agent_anti_cheat_director.py  agent_approval_engine.py  agent_asset.py  agent_asset_harmonizer.py  agent_asset_optimizer.py  agent_asset_synthesizer.py  agent_atmospheric_weather_director.py  agent_attention_allocator.py  agent_audio_composer.py  agent_audit_trail.py  agent_autonomous_creator.py  agent_autonomous_mission.py  agent_autonomous_tester.py  (+449 more)
sparkai/agent/skills/: __init__.py  base.py  debug.py  template.py
sparkai/agent/studio/: __init__.py  directors.py  leads.py  specialists.py
sparkai/ai/: CMakeLists.txt
sparkai/ai/behavior/: ActionNodes.cpp  ActionNodes.h  Agent.cpp  Agent.h  BehaviorTree.cpp  BehaviorTree.h  BehaviorTreeFactory.cpp  BehaviorTreeFactory.h  BehaviorTreeNode.cpp  BehaviorTreeNode.h  CMakeLists.txt  CompositeNodes.cpp  CompositeNodes.h  DecoratorNodes.cpp  DecoratorNodes.h
sparkai/ai/brain/: AIBlackboard.cpp  AIBlackboard.h  AIBrain.cpp  AIBrain.h  AIEventBus.cpp  AIEventBus.h  AIMemoryEntry.h  AINode.cpp  AINode.h  CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  TensorRef.h
sparkai/ai/onnx/: CMakeLists.txt  GPUSupport.cpp  GPUSupport.h  MemoryPool.cpp  MemoryPool.h  ONNXInferenceEngine.cpp  ONNXInferenceEngine.h  ONNXModelLoader.cpp  ONNXModelLoader.h  ONNXPlugin.cpp  ONNXPlugin.h  Tensor.cpp  Tensor.h
sparkai/api/: __init__.py
sparkai/api/routes/: __init__.py  llm_router_routes.py
sparkai/asset/: AssetGenerator.h
sparkai/audio/: VoiceSynthesis.h
sparkai/core/: agent_engine_orchestrator.py
sparkai/editor/: AIEditorPanel.cpp  AIEditorPanel.h  AssetBrowser.cpp  AssetBrowser.h  AssetGeneratorPanel.cpp  AssetGeneratorPanel.h  BehaviorTreeEditor.cpp  BehaviorTreeEditor.h  CMakeLists.txt  SceneEditor.cpp  SceneEditor.h
sparkai/engine/: __init__.py  achievement_system.py  animation_controller.py  animation_system.py  asset_pipeline.py  audio_system.py  behavior_system.py  behavior_tree.py  build_pipeline.py  camera_shake.py  camera_system.py  character_controller.py  cloud_sync.py  collision_layers.py  collision_system.py  combat_system.py  config_manager.py  console_system.py  crafting_system.py  cutscene_system.py  day_night_cycle.py  debug_draw_system.py  destruction_system.py  dialogue_system.py  difficulty_system.py  dynamic_music.py  economy_system.py  effects_system.py  engine.py  engine_accessibility_system.py  engine_achievement_progression.py  engine_achievement_quest_system.py  engine_achievement_system.py  engine_acoustic_wave.py  engine_adaptive_content.py  engine_adaptive_physics_director.py  engine_adaptive_rendering.py  engine_agent_bridge.py  engine_ai_bridge.py  engine_ai_capability_surface.py  (+423 more)
sparkai/engine/ecs/: __init__.py  component.py  components.py  entity.py  resource.py  system.py  systems.py  world.py
sparkai/game/: SparkCraft.cpp  SparkCraft.h  SparkDebug.cpp  SparkDebug.h
sparkai/gameplay/: DifficultyController.cpp  DifficultyController.h  PlayerModel.cpp  PlayerModel.h
sparkai/narrative/: StoryGraph.cpp  StoryGraph.h  __init__.py  quest.py  story.py
sparkai/neural/: CMakeLists.txt  NeuralAmbientOcclusion.cpp  NeuralAmbientOcclusion.h  NeuralAntiAlias.cpp  NeuralAntiAlias.h  NeuralUpscaleEffect.cpp  NeuralUpscaleEffect.h
sparkai/npc/: AIMemory.cpp  AIMemory.h  NPCBrain.cpp  NPCBrain.h  NPCPersonality.cpp  NPCPersonality.h  __init__.py  behavior.py  brain.py  personality.py
sparkai/storyboard/: Storyboard.h
sparkai/team/: TeamDirector.cpp  TeamDirector.h  TeamLead.cpp  TeamLead.h  TeamOrchestrator.cpp  TeamOrchestrator.h  WorkflowManager.cpp  WorkflowManager.h  __init__.py  director.py  lead.py  quality.py  specialist.py
sparkai/ui/: WorkflowCanvas.cpp  WorkflowCanvas.h
sparkai/video/: VideoCompositor.h
sparkai/workflow/: WorkflowFactory.h  WorkflowGraph.cpp  WorkflowGraph.h  __init__.py  executor.py  graph.py  registry.py
(+469 files in other folders)
